Add MDX for blog post pages, add more blog posts

--- a/src/markdown/posts/worldskills.mdx
+++ b/src/markdown/posts/worldskills.mdx
@@ -3,6 +3,9 @@ path: "worldskills"
 title: "WorldSkills 2016 Nationals"
 date: "2016-10-11"
 ---
+import Image from "../../components/Image"
+import BlogCarousel from "../../components/BlogCarousel"
+
 In October 2016, I attended the WorldSkills National Competition in Melbourne. It was a 3-day competition, with 4 separate modules spread out over the 3 days.
 
 - The first module was a web design module, which consisted of creating an original full-page design, to fulfil a brief. 
@@ -10,12 +13,12 @@ In October 2016, I attended the WorldSkills National Competition in Melbourne. I
 - The third module was a server-side programming and database module, which allowed users to view, create, edit and delete data, only while logged in, and had to be protected against XSS attacks. 
 - The final module was a responsive design challenge, where we had to create three different layouts for an original webpage design in Photoshop, for desktop, tablet and mobile phone sizes.
 
-![Stage](../../images/posts/worldskills/stage.jpg)
-
-Pictured here is Harlan Wilton, previous medal winner and international competitor, and Colin Tyrrell, my TAFE teacher and coach for WorldSkills.
-
-![Harlan Wilton, Sam Leatherdale, and Colin Tyrrell](../../images/posts/worldskills/colin-harlan.jpg)
-
 After the competition, an article was published in the [Blue Mountains Gazette](https://www.bluemountainsgazette.com.au/story/4238566/tafe-students-come-up-trumps).
 
-![Medal](../../images/posts/worldskills/medal-headshot.jpg)
+<BlogCarousel>
+    <Image src={"worldskills/stage.jpg"} />
+    <Image src={"worldskills/colin-harlan.jpg"} alt="Harlan Wilton, Sam Leatherdale, and Colin Tyrrell" />
+    <Image src={"worldskills/medal-headshot.jpg"} />
+    <Image src={"worldskills/medal-front.jpg"} />
+    <Image src={"worldskills/medal-back.jpg"} />
+</BlogCarousel>
