Style fixes for mobile and dark mode

--- a/src/markdown/posts/path-to-worldskills.mdx
+++ b/src/markdown/posts/path-to-worldskills.mdx
@@ -8,7 +8,7 @@ import Image from "../../components/Image"
 I have been training for many months to prepare for the WorldSkills competition. Right before I headed off, it was great to go to this award ceremony held by TAFE, and to meet our local member Trish Doyle.
 
 Two articles were published:
-- The first article was about the ceremony, published on the Blue Mountains Australia website: http://www.bluemts.com.au/news/blue-mountains-tafe-excellence-acknowledged
-- The second article was about the preparation for the National competition: https://www.bluemountainsgazette.com.au/story/4119806/tafe-skills-tested
+- The first article was about the ceremony, published on the [Blue Mountains Australia website](http://www.bluemts.com.au/news/blue-mountains-tafe-excellence-acknowledged). 
+- The second article was about the preparation for the National competition, published by the [Blue Mountains Gazette](https://www.bluemountainsgazette.com.au/story/4119806/tafe-skills-tested). 
 
 <Image src={"path-to-worldskills/ceremony.jpg"} width="600px" center={true} />
